--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1042,52 +1042,52 @@ a {
     left: -1rem;
   }
 }
-.cid-teKorV6XuI {
+.cid-tf7ZYSbF1q {
   padding-top: 0;
   padding-bottom: 0;
   background-color: #fafafa;
 }
-.cid-teKorV6XuI .carousel {
+.cid-tf7ZYSbF1q .carousel {
   width: 100%;
 }
-.cid-teKorV6XuI .carousel-inner {
+.cid-tf7ZYSbF1q .carousel-inner {
   display: flex;
   align-content: center;
   align-items: center;
 }
-.cid-teKorV6XuI .carousel-item img {
+.cid-tf7ZYSbF1q .carousel-item img {
   height: 100vh;
   object-fit: cover;
 }
-.cid-teKorV6XuI .carousel-caption {
+.cid-tf7ZYSbF1q .carousel-caption {
   bottom: 40px;
 }
-.cid-teKorV6XuI .mobi-mbri-arrow-next {
+.cid-tf7ZYSbF1q .mobi-mbri-arrow-next {
   margin-left: 5px;
 }
-.cid-teKorV6XuI .mobi-mbri-arrow-prev {
+.cid-tf7ZYSbF1q .mobi-mbri-arrow-prev {
   margin-right: 5px;
 }
-.cid-teKorV6XuI .carousel-control:hover {
+.cid-tf7ZYSbF1q .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
-.cid-teKorV6XuI .item-wrapper {
+.cid-tf7ZYSbF1q .item-wrapper {
   width: 100%;
 }
 @media (max-width: 767px) {
-  .cid-teKorV6XuI .container .carousel-control {
+  .cid-tf7ZYSbF1q .container .carousel-control {
     margin-bottom: 0;
   }
-  .cid-teKorV6XuI .content-slider-wrap {
+  .cid-tf7ZYSbF1q .content-slider-wrap {
     width: 100% !important;
   }
 }
-.cid-teKorV6XuI .container .carousel-indicators {
+.cid-tf7ZYSbF1q .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-teKorV6XuI .carousel-control {
+.cid-tf7ZYSbF1q .carousel-control {
   top: 50%;
   width: 60px;
   height: 60px;
@@ -1098,26 +1098,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-teKorV6XuI .carousel-control.carousel-control-prev {
+.cid-tf7ZYSbF1q .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-teKorV6XuI .carousel-control.carousel-control-next {
+.cid-tf7ZYSbF1q .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-teKorV6XuI .carousel-control {
+  .cid-tf7ZYSbF1q .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-teKorV6XuI .carousel-indicators {
+.cid-tf7ZYSbF1q .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-teKorV6XuI .carousel-indicators li {
+.cid-tf7ZYSbF1q .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -1129,15 +1129,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-teKorV6XuI .carousel-indicators li.active,
-.cid-teKorV6XuI .carousel-indicators li:hover {
+.cid-tf7ZYSbF1q .carousel-indicators li.active,
+.cid-tf7ZYSbF1q .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-teKorV6XuI .carousel-indicators li::after,
-.cid-teKorV6XuI .carousel-indicators li::before {
+.cid-tf7ZYSbF1q .carousel-indicators li::after,
+.cid-tf7ZYSbF1q .carousel-indicators li::before {
   content: none;
 }
-.cid-teKorV6XuI .carousel-indicators.ie-fix {
+.cid-tf7ZYSbF1q .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -1145,9 +1145,280 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-teKorV6XuI .carousel-indicators {
+  .cid-tf7ZYSbF1q .carousel-indicators {
     display: none !important;
   }
+}
+.cid-tf800NutyR {
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  background-color: #001928;
+}
+.cid-tf800NutyR .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tf800NutyR .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tf800NutyR .item {
+  padding-bottom: 2rem;
+}
+.cid-tf800NutyR .item-wrapper {
+  height: 100%;
+  position: relative;
+}
+.cid-tf800NutyR .item-wrapper img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-tf800NutyR .item-wrapper .icon-wrapper {
+  pointer-events: none;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  font-size: 22px;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  opacity: 0;
+  color: #ffffff;
+  transform: translateX(-50%) translateY(-50%);
+  background-color: #1b1b1b;
+  transition: 0.2s;
+}
+.cid-tf800NutyR .item-wrapper:hover .icon-wrapper {
+  opacity: 0.7;
+}
+.cid-tf800NutyR .carousel-control,
+.cid-tf800NutyR .close {
+  background: #1b1b1b;
+}
+.cid-tf800NutyR .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-tf800NutyR .carousel-control-prev span {
+  margin-right: 5px;
+}
+.cid-tf800NutyR .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-tf800NutyR .carousel-control-next span {
+  margin-left: 5px;
+}
+.cid-tf800NutyR .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  font-family: 'Moririse2';
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-tf800NutyR .close::before {
+  content: '\e91a';
+}
+.cid-tf800NutyR .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-tf800NutyR .carousel-control {
+  display: flex;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-tf800NutyR .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tf800NutyR .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-tf800NutyR .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-tf800NutyR .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3px;
+}
+.cid-tf800NutyR .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-tf800NutyR .carousel-indicators li.active,
+.cid-tf800NutyR .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-tf800NutyR .carousel-indicators li::after,
+.cid-tf800NutyR .carousel-indicators li::before {
+  content: none;
+}
+.cid-tf800NutyR .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-tf800NutyR .carousel-indicators {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tf800NutyR .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tf800NutyR .carousel-indicators {
+    display: none;
+  }
+}
+.cid-tf800NutyR .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-tf800NutyR .carousel-inner > .active {
+  display: block;
+}
+.cid-tf800NutyR .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tf800NutyR .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-tf800NutyR .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-tf800NutyR .carousel-control,
+  .cid-tf800NutyR .carousel-indicators,
+  .cid-tf800NutyR .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tf800NutyR .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-tf800NutyR .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-tf800NutyR .carousel-indicators .active,
+.cid-tf800NutyR .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #000000;
+  opacity: 0.5;
+  border: 4px solid #000000;
+}
+.cid-tf800NutyR .carousel-indicators .active {
+  background: #fff;
+}
+.cid-tf800NutyR .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-tf800NutyR .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-tf800NutyR .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-tf800NutyR .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-tf800NutyR .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-tf800NutyR .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(100vh - 1.75rem);
+}
+.cid-tf800NutyR .carousel {
+  width: 100%;
+}
+.cid-tf800NutyR .modal-backdrop.in {
+  opacity: 0.8;
+}
+.cid-tf800NutyR .modal.fade .modal-dialog {
+  transition: margin-top 0.3s ease-out;
+}
+.cid-tf800NutyR .modal.fade .modal-dialog,
+.cid-tf800NutyR .modal.in .modal-dialog {
+  transform: none;
+}
+.cid-tf800NutyR .mbr-gallery .item-wrapper {
+  cursor: pointer;
+}
+.cid-tf800NutyR H6 {
+  text-align: center;
+}
+.cid-tf800NutyR H3 {
+  color: #ffffff;
 }
 .cid-teYHrjJlKs {
   padding-top: 30px;
@@ -5702,6 +5973,400 @@ a {
   color: #ffffff;
 }
 .cid-teYHrjJlKs {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000000;
+  overflow: hidden;
+}
+.cid-tf7Yk62HrV {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-tf7Yk62HrV nav.navbar {
+  position: fixed;
+}
+.cid-tf7Yk62HrV .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tf7Yk62HrV .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-tf7Yk62HrV .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-tf7Yk62HrV .dropdown-item:hover,
+.cid-tf7Yk62HrV .dropdown-item:focus {
+  background: #6592e6 !important;
+  color: white !important;
+}
+.cid-tf7Yk62HrV .dropdown-item:hover span {
+  color: white;
+}
+.cid-tf7Yk62HrV .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-tf7Yk62HrV .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-tf7Yk62HrV .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-tf7Yk62HrV .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-tf7Yk62HrV .nav-link {
+  position: relative;
+}
+.cid-tf7Yk62HrV .container {
+  display: flex;
+  margin: auto;
+}
+@media (min-width: 992px) {
+  .cid-tf7Yk62HrV .container {
+    flex-wrap: nowrap;
+  }
+}
+.cid-tf7Yk62HrV .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-tf7Yk62HrV .dropdown-menu,
+.cid-tf7Yk62HrV .navbar.opened {
+  background: #000000 !important;
+}
+.cid-tf7Yk62HrV .nav-item:focus,
+.cid-tf7Yk62HrV .nav-link:focus {
+  outline: none;
+}
+.cid-tf7Yk62HrV .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-tf7Yk62HrV .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-tf7Yk62HrV .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-tf7Yk62HrV .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tf7Yk62HrV .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-tf7Yk62HrV .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-tf7Yk62HrV .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #000000;
+}
+.cid-tf7Yk62HrV .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-tf7Yk62HrV .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-tf7Yk62HrV .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-tf7Yk62HrV .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-tf7Yk62HrV .navbar.collapsed {
+  justify-content: center;
+}
+.cid-tf7Yk62HrV .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-tf7Yk62HrV .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+.cid-tf7Yk62HrV .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-tf7Yk62HrV .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-tf7Yk62HrV .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-tf7Yk62HrV .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-tf7Yk62HrV .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-tf7Yk62HrV .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-tf7Yk62HrV .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-tf7Yk62HrV .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-tf7Yk62HrV .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-tf7Yk62HrV .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-tf7Yk62HrV .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-tf7Yk62HrV .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-tf7Yk62HrV .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-tf7Yk62HrV .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-tf7Yk62HrV .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-tf7Yk62HrV .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-tf7Yk62HrV .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+@media (max-width: 991px) and (max-width: 767px) {
+  .cid-tf7Yk62HrV .navbar .navbar-brand {
+    width: calc(100% - 31px);
+  }
+}
+.cid-tf7Yk62HrV .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-tf7Yk62HrV .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-tf7Yk62HrV .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-tf7Yk62HrV .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-tf7Yk62HrV .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-tf7Yk62HrV .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-tf7Yk62HrV .dropdown-item.active,
+.cid-tf7Yk62HrV .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-tf7Yk62HrV .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-tf7Yk62HrV .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-tf7Yk62HrV .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-tf7Yk62HrV .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #000000;
+}
+.cid-tf7Yk62HrV .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-tf7Yk62HrV .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-tf7Yk62HrV ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-tf7Yk62HrV .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-tf7Yk62HrV button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-tf7Yk62HrV button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-tf7Yk62HrV button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-tf7Yk62HrV button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tf7Yk62HrV button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tf7Yk62HrV button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-tf7Yk62HrV nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tf7Yk62HrV nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-tf7Yk62HrV nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-tf7Yk62HrV nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tf7Yk62HrV .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-tf7Yk62HrV a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-tf7Yk62HrV .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-tf7Yk62HrV .navbar {
+    height: 70px;
+  }
+  .cid-tf7Yk62HrV .navbar.opened {
+    height: auto;
+  }
+  .cid-tf7Yk62HrV .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-tf7ZTROpgY {
+  padding-top: 3rem;
+  padding-bottom: 4rem;
+  background-color: #290948;
+}
+.cid-tf7ZTROpgY .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tf7ZTROpgY .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tf7ZTROpgY .video-wrapper iframe {
+  width: 100%;
+}
+.cid-tf7ZTROpgY .mbr-section-title,
+.cid-tf7ZTROpgY .mbr-section-subtitle,
+.cid-tf7ZTROpgY .mbr-text {
+  text-align: center;
+}
+.cid-tf7ZTROpgY .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tf7Yk7Ssph {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #000000;
