--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2607,8 +2607,8 @@ a {
 }
 .cid-terPpUKtqY {
   padding-top: 4rem;
-  padding-bottom: 2rem;
-  background-color: #290948;
+  padding-bottom: 0rem;
+  background-color: #232323;
 }
 .cid-terPpUKtqY img,
 .cid-terPpUKtqY .item-img {
@@ -2625,7 +2625,7 @@ a {
 .cid-terPpUKtqY .item-wrapper {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #232323;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -2651,281 +2651,62 @@ a {
   text-align: left;
 }
 .cid-terPpUKtqY .item-title {
-  text-align: left;
+  text-align: center;
+  color: #ffffff;
 }
 .cid-terPpUKtqY .item-subtitle {
   text-align: left;
 }
-.cid-tdmhR8NHZA {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-}
-.cid-tdmhR8NHZA .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tdmhR8NHZA .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  background-image: url("../../../assets/images/background-2-1920x1080.jpg");
-}
-.cid-tdmhR8NHZA .item {
+.cid-tfvaTp2gyt {
+  padding-top: 4rem;
   padding-bottom: 2rem;
+  background-color: #290948;
 }
-.cid-tdmhR8NHZA .item-wrapper {
-  height: 100%;
+.cid-tfvaTp2gyt img,
+.cid-tfvaTp2gyt .item-img {
+  width: 100%;
+}
+.cid-tfvaTp2gyt .item:focus,
+.cid-tfvaTp2gyt span:focus {
+  outline: none;
+}
+.cid-tfvaTp2gyt .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tfvaTp2gyt .item-wrapper {
   position: relative;
-}
-.cid-tdmhR8NHZA .item-wrapper img {
+  border-radius: 4px;
+  background: #fafafa;
   height: 100%;
-  object-fit: cover;
-}
-.cid-tdmhR8NHZA .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
+  flex-flow: column nowrap;
 }
-.cid-tdmhR8NHZA .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-tdmhR8NHZA .carousel-control,
-.cid-tdmhR8NHZA .close {
-  background: #1b1b1b;
-}
-.cid-tdmhR8NHZA .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-tdmhR8NHZA .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-tdmhR8NHZA .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-tdmhR8NHZA .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-tdmhR8NHZA .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-tdmhR8NHZA .close::before {
-  content: '\e91a';
-}
-.cid-tdmhR8NHZA .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-tdmhR8NHZA .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-tdmhR8NHZA .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tdmhR8NHZA .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tdmhR8NHZA .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-tdmhR8NHZA .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-tdmhR8NHZA .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-tdmhR8NHZA .carousel-indicators li.active,
-.cid-tdmhR8NHZA .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-tdmhR8NHZA .carousel-indicators li::after,
-.cid-tdmhR8NHZA .carousel-indicators li::before {
-  content: none;
-}
-.cid-tdmhR8NHZA .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-tdmhR8NHZA .carousel-indicators {
-    display: none !important;
+@media (min-width: 992px) {
+  .cid-tfvaTp2gyt .item-wrapper .item-content {
+    padding: 2rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-tdmhR8NHZA .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+  .cid-tfvaTp2gyt .item-wrapper .item-content {
+    padding: 1rem;
   }
 }
-@media (max-width: 767px) {
-  .cid-tdmhR8NHZA .carousel-indicators {
-    display: none;
-  }
+.cid-tfvaTp2gyt .mbr-section-btn {
+  margin-top: auto !important;
 }
-.cid-tdmhR8NHZA .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-tdmhR8NHZA .carousel-inner > .active {
-  display: block;
-}
-.cid-tdmhR8NHZA .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tdmhR8NHZA .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-tdmhR8NHZA .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-tdmhR8NHZA .carousel-control,
-  .cid-tdmhR8NHZA .carousel-indicators,
-  .cid-tdmhR8NHZA .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tdmhR8NHZA .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-tdmhR8NHZA .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-tdmhR8NHZA .carousel-indicators .active,
-.cid-tdmhR8NHZA .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-tdmhR8NHZA .carousel-indicators .active {
-  background: #fff;
-}
-.cid-tdmhR8NHZA .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-tdmhR8NHZA .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-tdmhR8NHZA .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-tdmhR8NHZA .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-tdmhR8NHZA .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-tdmhR8NHZA .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-tdmhR8NHZA .carousel {
-  width: 100%;
-}
-.cid-tdmhR8NHZA .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-tdmhR8NHZA .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-tdmhR8NHZA .modal.fade .modal-dialog,
-.cid-tdmhR8NHZA .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-tdmhR8NHZA .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-tdmhR8NHZA H6 {
-  text-align: center;
-}
-.cid-tdmhR8NHZA H3 {
+.cid-tfvaTp2gyt .mbr-section-title {
   color: #ffffff;
+}
+.cid-tfvaTp2gyt .mbr-text,
+.cid-tfvaTp2gyt .mbr-section-btn {
+  text-align: left;
+}
+.cid-tfvaTp2gyt .item-title {
+  text-align: left;
+}
+.cid-tfvaTp2gyt .item-subtitle {
+  text-align: left;
 }
 .cid-teYGYYTDU7 {
   z-index: 1000;
