--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3818,271 +3818,138 @@ a {
   background-color: #000000;
   overflow: hidden;
 }
-.cid-tfw5sOcebj {
-  padding-top: 3rem;
-  padding-bottom: 1rem;
+.cid-tfwcPQXHtG {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
   background-color: #d64184;
 }
-.cid-tfw5sOcebj .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tfw5sOcebj .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
+.cid-tfwcPQXHtG img,
+.cid-tfwcPQXHtG .item-img {
   width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
 }
-.cid-tfw5sOcebj .item {
-  padding-bottom: 2rem;
+.cid-tfwcPQXHtG .item:focus,
+.cid-tfwcPQXHtG span:focus {
+  outline: none;
 }
-.cid-tfw5sOcebj .item-wrapper {
+.cid-tfwcPQXHtG .item-wrapper {
   position: relative;
 }
-.cid-tfw5sOcebj .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
+.cid-tfwcPQXHtG .slide-content {
+  position: relative;
+  border-radius: 4px;
+  background: #d64184;
+  height: 100%;
   display: flex;
-  align-items: center;
+  overflow: hidden;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tfwcPQXHtG .slide-content .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tfwcPQXHtG .slide-content .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tfwcPQXHtG .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tfwcPQXHtG .mbr-section-title {
+  color: #232323;
+}
+.cid-tfwcPQXHtG .mbr-text,
+.cid-tfwcPQXHtG .mbr-section-btn {
+  text-align: left;
+}
+.cid-tfwcPQXHtG .item-title {
+  text-align: left;
+}
+.cid-tfwcPQXHtG .item-subtitle {
+  text-align: left;
+}
+.cid-tfwcPQXHtG .embla__slide {
+  display: flex;
   justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
+  position: relative;
+  min-width: 410px;
+  max-width: 410px;
 }
-.cid-tfw5sOcebj .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
+@media (max-width: 768px) {
+  .cid-tfwcPQXHtG .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
 }
-.cid-tfw5sOcebj .carousel-control,
-.cid-tfw5sOcebj .close {
-  background: #1b1b1b;
-}
-.cid-tfw5sOcebj .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-tfw5sOcebj .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-tfw5sOcebj .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-tfw5sOcebj .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-tfw5sOcebj .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
+.cid-tfwcPQXHtG .embla__button--next,
+.cid-tfwcPQXHtG .embla__button--prev {
   display: flex;
 }
-.cid-tfw5sOcebj .close::before {
-  content: '\e91a';
-}
-.cid-tfw5sOcebj .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-tfw5sOcebj .carousel-control {
-  display: flex;
+.cid-tfwcPQXHtG .embla__button {
   top: 50%;
   width: 60px;
   height: 60px;
   margin-top: -1.5rem;
   font-size: 22px;
   background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
   border: 2px solid #fff;
   border-radius: 50%;
   transition: all 0.3s;
-}
-.cid-tfw5sOcebj .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tfw5sOcebj .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tfw5sOcebj .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-tfw5sOcebj .carousel-indicators {
   position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-tfw5sOcebj .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-tfw5sOcebj .carousel-indicators li.active,
-.cid-tfw5sOcebj .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-tfw5sOcebj .carousel-indicators li::after,
-.cid-tfw5sOcebj .carousel-indicators li::before {
-  content: none;
-}
-.cid-tfw5sOcebj .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width: 768px) {
-  .cid-tfw5sOcebj .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tfw5sOcebj .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tfw5sOcebj .carousel-indicators {
+  .cid-tfwcPQXHtG .embla__button {
     display: none;
   }
 }
-.cid-tfw5sOcebj .carousel-inner {
-  display: flex;
-  align-items: center;
+.cid-tfwcPQXHtG .embla__button:disabled {
+  cursor: default;
+  display: none;
 }
-.cid-tfw5sOcebj .carousel-inner > .active {
-  display: block;
+.cid-tfwcPQXHtG .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
 }
-.cid-tfw5sOcebj .carousel-control.left {
+.cid-tfwcPQXHtG .embla__button.embla__button--prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-tfw5sOcebj .carousel-control.right {
+.cid-tfwcPQXHtG .embla__button.embla__button--next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-tfw5sOcebj .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-tfw5sOcebj .carousel-control,
-  .cid-tfw5sOcebj .carousel-indicators,
-  .cid-tfw5sOcebj .modal .close {
-    position: fixed;
-  }
-}
 @media (max-width: 767px) {
-  .cid-tfw5sOcebj .mbr-slider .carousel-control {
+  .cid-tfwcPQXHtG .embla__button {
     top: auto;
-    bottom: 20px;
-  }
-  .cid-tfw5sOcebj .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
   }
 }
-.cid-tfw5sOcebj .carousel-indicators .active,
-.cid-tfw5sOcebj .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
+.cid-tfwcPQXHtG .embla {
+  position: relative;
+  width: 100%;
 }
-.cid-tfw5sOcebj .carousel-indicators .active {
-  background: #fff;
-}
-.cid-tfw5sOcebj .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-tfw5sOcebj .modal {
-  padding-left: 0 !important;
-  position: fixed;
+.cid-tfwcPQXHtG .embla__viewport {
   overflow: hidden;
-  padding-right: 0 !important;
+  width: 100%;
 }
-.cid-tfw5sOcebj .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
+.cid-tfwcPQXHtG .embla__viewport.is-draggable {
+  cursor: grab;
 }
-.cid-tfw5sOcebj .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
+.cid-tfwcPQXHtG .embla__viewport.is-dragging {
+  cursor: grabbing;
 }
-.cid-tfw5sOcebj .modal-body {
-  padding: 0;
+.cid-tfwcPQXHtG .embla__container {
   display: flex;
-  align-items: center;
-}
-.cid-tfw5sOcebj .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-tfw5sOcebj .carousel {
-  width: 100%;
-}
-.cid-tfw5sOcebj .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-tfw5sOcebj .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-tfw5sOcebj .modal.fade .modal-dialog,
-.cid-tfw5sOcebj .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-tfw5sOcebj .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-tfw5sOcebj H6 {
-  text-align: center;
-}
-.cid-tfw5sOcebj H3 {
-  color: #ffffff;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 .cid-teXgbvs3Vw {
   padding-top: 3rem;
