--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2605,8 +2605,60 @@ a {
   background-color: #000000;
   overflow: hidden;
 }
-.cid-terPpUKtqY {
+.cid-tfwmhN5l9M {
   padding-top: 4rem;
+  padding-bottom: 0rem;
+  background-color: #232323;
+}
+.cid-tfwmhN5l9M img,
+.cid-tfwmhN5l9M .item-img {
+  width: 100%;
+}
+.cid-tfwmhN5l9M .item:focus,
+.cid-tfwmhN5l9M span:focus {
+  outline: none;
+}
+.cid-tfwmhN5l9M .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tfwmhN5l9M .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #232323;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tfwmhN5l9M .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tfwmhN5l9M .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tfwmhN5l9M .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tfwmhN5l9M .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tfwmhN5l9M .mbr-text,
+.cid-tfwmhN5l9M .mbr-section-btn {
+  text-align: left;
+}
+.cid-tfwmhN5l9M .item-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-tfwmhN5l9M .item-subtitle {
+  text-align: left;
+}
+.cid-terPpUKtqY {
+  padding-top: 1rem;
   padding-bottom: 0rem;
   background-color: #232323;
 }
